jss2zb/src/pp2/y.output
Grammar

    0 $accept: Program $end

    1 Program: DeclList

    2 DeclList: DeclList Decl
    3         | Decl

    4 Decl: VarDecl
    5     | ClassDecl
    6     | InterfaceDecl
    7     | FnDecl

    8 ClassDecl: T_Class T_Identifier ClassOpts1 ClassOpts2 '{' Fields '}'

    9 ClassOpts1: T_Extends T_Identifier
   10           | /* empty */

   11 ClassOpts2: T_Implements IdentList
   12           | /* empty */

   13 IdentList: IdentList ',' T_Identifier
   14          | T_Identifier

   15 Fields: Fields Field
   16       | /* empty */

   17 Field: VarDecl
   18      | FnDecl

   19 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}'

   20 PrototypeList: PrototypeList Prototype
   21              | /* empty */

   22 Prototype: FnHeader ';'

   23 VarDecl: Variable ';'

   24 Variable: Type T_Identifier

   25 Type: T_Int
   26     | T_Bool
   27     | T_String
   28     | T_Double
   29     | T_Identifier
   30     | Type T_Dims

   31 FnDecl: FnHeader StmtBlock

   32 FnHeader: Type T_Identifier '(' Formals ')'
   33         | T_Void T_Identifier '(' Formals ')'

   34 Formals: FormalList
   35        | /* empty */

   36 FormalList: FormalList ',' Variable
   37           | Variable

   38 StmtBlock: '{' VarDecls StmtList '}'

   39 VarDecls: VarDecls VarDecl
   40         | /* empty */

   41 StmtList: StmtList Stmt
   42         | /* empty */

   43 Stmt: OptExpr ';'
   44     | IfStmt
   45     | WhileStmt
   46     | ForStmt
   47     | BreakStmt
   48     | ReturnStmt
   49     | PrintStmt
   50     | StmtBlock

   51 OptExpr: Expr
   52        | /* empty */

   53 IfStmt: T_If '(' Expr ')' Stmt T_Else Stmt
   54       | T_If '(' Expr ')' Stmt

   55 WhileStmt: T_While '(' Expr ')' Stmt

   56 ForStmt: T_For '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

   57 ReturnStmt: T_Return OptExpr ';'

   58 BreakStmt: T_Break ';'

   59 PrintStmt: T_Print '(' ExprList ')' ';'

   60 Expr: Constants
   61     | T_This
   62     | T_ReadInteger '(' ')'
   63     | T_ReadLine '(' ')'
   64     | T_New '(' T_Identifier ')'
   65     | T_NewArray '(' Expr ',' Type ')'
   66     | Expr T_Equal Expr
   67     | Expr T_NotEqual Expr
   68     | Expr T_GreaterEqual Expr
   69     | Expr '<' Expr
   70     | Expr '>' Expr
   71     | Expr T_LessEqual
   72     | Expr T_And
   73     | Expr T_Or
   74     | Expr '+' Expr
   75     | Expr '-' Expr
   76     | Expr '*' Expr
   77     | Expr '/' Expr
   78     | Expr '%' Expr
   79     | '-' Expr
   80     | NOT Expr
   81     | '(' Expr ')'

   82 ExprList: ExprList ',' Expr
   83         | Expr

   84 Constants: T_IntConstant
   85          | T_DoubleConstant
   86          | T_BoolConstant
   87          | T_StringConstant
   88          | T_Null


Terminals, with rules where they appear

$end (0) 0
'%' (37) 78
'(' (40) 32 33 53 54 55 56 59 62 63 64 65 81
')' (41) 32 33 53 54 55 56 59 62 63 64 65 81
'*' (42) 76
'+' (43) 74
',' (44) 13 36 65 82
'-' (45) 75 79
'/' (47) 77
';' (59) 22 23 43 56 57 58 59
'<' (60) 69
'>' (62) 70
'{' (123) 8 19 38
'}' (125) 8 19 38
error (256)
T_Void (258) 33
T_Bool (259) 26
T_Int (260) 25
T_Double (261) 28
T_String (262) 27
T_Class (263) 8
T_LessEqual (264) 71
T_GreaterEqual (265) 68
T_Equal (266) 66
T_NotEqual (267) 67
T_Dims (268) 30
T_And (269) 72
T_Or (270) 73
T_Null (271) 88
T_Extends (272) 9
T_This (273) 61
T_Interface (274) 19
T_Implements (275) 11
T_While (276) 55
T_For (277) 56
T_If (278) 53 54
T_Else (279) 53
T_Return (280) 57
T_Break (281) 58
T_New (282) 64
T_NewArray (283) 65
T_Print (284) 59
T_ReadInteger (285) 62
T_ReadLine (286) 63
T_Identifier (287) 8 9 13 14 19 24 29 32 33 64
T_StringConstant (288) 87
T_IntConstant (289) 84
T_DoubleConstant (290) 85
T_BoolConstant (291) 86
NOT (292) 80
THEN (293)


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
Program (53)
    on left: 1, on right: 0
DeclList (54)
    on left: 2 3, on right: 1 2
Decl (55)
    on left: 4 5 6 7, on right: 2 3
ClassDecl (56)
    on left: 8, on right: 5
ClassOpts1 (57)
    on left: 9 10, on right: 8
ClassOpts2 (58)
    on left: 11 12, on right: 8
IdentList (59)
    on left: 13 14, on right: 11 13
Fields (60)
    on left: 15 16, on right: 8 15
Field (61)
    on left: 17 18, on right: 15
InterfaceDecl (62)
    on left: 19, on right: 6
PrototypeList (63)
    on left: 20 21, on right: 19 20
Prototype (64)
    on left: 22, on right: 20
VarDecl (65)
    on left: 23, on right: 4 17 39
Variable (66)
    on left: 24, on right: 23 36 37
Type (67)
    on left: 25 26 27 28 29 30, on right: 24 30 32 65
FnDecl (68)
    on left: 31, on right: 7 18
FnHeader (69)
    on left: 32 33, on right: 22 31
Formals (70)
    on left: 34 35, on right: 32 33
FormalList (71)
    on left: 36 37, on right: 34 36
StmtBlock (72)
    on left: 38, on right: 31 50
VarDecls (73)
    on left: 39 40, on right: 38 39
StmtList (74)
    on left: 41 42, on right: 38 41
Stmt (75)
    on left: 43 44 45 46 47 48 49 50, on right: 41 53 54 55 56
OptExpr (76)
    on left: 51 52, on right: 43 56 57
IfStmt (77)
    on left: 53 54, on right: 44
WhileStmt (78)
    on left: 55, on right: 45
ForStmt (79)
    on left: 56, on right: 46
ReturnStmt (80)
    on left: 57, on right: 48
BreakStmt (81)
    on left: 58, on right: 47
PrintStmt (82)
    on left: 59, on right: 49
Expr (83)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81, on right: 51 53 54 55 56 65 66 67 68 69 70 71 72 73
    74 75 76 77 78 79 80 81 82 83
ExprList (84)
    on left: 82 83, on right: 59 82
Constants (85)
    on left: 84 85 86 87 88, on right: 60


state 0

    0 $accept: . Program $end

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    Program        go to state 9
    DeclList       go to state 10
    Decl           go to state 11
    ClassDecl      go to state 12
    InterfaceDecl  go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    Type           go to state 16
    FnDecl         go to state 17
    FnHeader       go to state 18


state 1

   33 FnHeader: T_Void . T_Identifier '(' Formals ')'

    T_Identifier  shift, and go to state 19


state 2

   26 Type: T_Bool .

    $default  reduce using rule 26 (Type)


state 3

   25 Type: T_Int .

    $default  reduce using rule 25 (Type)


state 4

   28 Type: T_Double .

    $default  reduce using rule 28 (Type)


state 5

   27 Type: T_String .

    $default  reduce using rule 27 (Type)


state 6

    8 ClassDecl: T_Class . T_Identifier ClassOpts1 ClassOpts2 '{' Fields '}'

    T_Identifier  shift, and go to state 20


state 7

   19 InterfaceDecl: T_Interface . T_Identifier '{' PrototypeList '}'

    T_Identifier  shift, and go to state 21


state 8

   29 Type: T_Identifier .

    $default  reduce using rule 29 (Type)


state 9

    0 $accept: Program . $end

    $end  shift, and go to state 22


state 10

    1 Program: DeclList .
    2 DeclList: DeclList . Decl

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Class       shift, and go to state 6
    T_Interface   shift, and go to state 7
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 1 (Program)

    Decl           go to state 23
    ClassDecl      go to state 12
    InterfaceDecl  go to state 13
    VarDecl        go to state 14
    Variable       go to state 15
    Type           go to state 16
    FnDecl         go to state 17
    FnHeader       go to state 18


state 11

    3 DeclList: Decl .

    $default  reduce using rule 3 (DeclList)


state 12

    5 Decl: ClassDecl .

    $default  reduce using rule 5 (Decl)


state 13

    6 Decl: InterfaceDecl .

    $default  reduce using rule 6 (Decl)


state 14

    4 Decl: VarDecl .

    $default  reduce using rule 4 (Decl)


state 15

   23 VarDecl: Variable . ';'

    ';'  shift, and go to state 24


state 16

   24 Variable: Type . T_Identifier
   30 Type: Type . T_Dims
   32 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 26


state 17

    7 Decl: FnDecl .

    $default  reduce using rule 7 (Decl)


state 18

   31 FnDecl: FnHeader . StmtBlock

    '{'  shift, and go to state 27

    StmtBlock  go to state 28


state 19

   33 FnHeader: T_Void T_Identifier . '(' Formals ')'

    '('  shift, and go to state 29


state 20

    8 ClassDecl: T_Class T_Identifier . ClassOpts1 ClassOpts2 '{' Fields '}'

    T_Extends  shift, and go to state 30

    $default  reduce using rule 10 (ClassOpts1)

    ClassOpts1  go to state 31


state 21

   19 InterfaceDecl: T_Interface T_Identifier . '{' PrototypeList '}'

    '{'  shift, and go to state 32


state 22

    0 $accept: Program $end .

    $default  accept


state 23

    2 DeclList: DeclList Decl .

    $default  reduce using rule 2 (DeclList)


state 24

   23 VarDecl: Variable ';' .

    $default  reduce using rule 23 (VarDecl)


state 25

   30 Type: Type T_Dims .

    $default  reduce using rule 30 (Type)


state 26

   24 Variable: Type T_Identifier .
   32 FnHeader: Type T_Identifier . '(' Formals ')'

    '('  shift, and go to state 33

    $default  reduce using rule 24 (Variable)


state 27

   38 StmtBlock: '{' . VarDecls StmtList '}'

    $default  reduce using rule 40 (VarDecls)

    VarDecls  go to state 34


state 28

   31 FnDecl: FnHeader StmtBlock .

    $default  reduce using rule 31 (FnDecl)


state 29

   33 FnHeader: T_Void T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 35 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 37
    FormalList  go to state 38


state 30

    9 ClassOpts1: T_Extends . T_Identifier

    T_Identifier  shift, and go to state 39


state 31

    8 ClassDecl: T_Class T_Identifier ClassOpts1 . ClassOpts2 '{' Fields '}'

    T_Implements  shift, and go to state 40

    $default  reduce using rule 12 (ClassOpts2)

    ClassOpts2  go to state 41


state 32

   19 InterfaceDecl: T_Interface T_Identifier '{' . PrototypeList '}'

    $default  reduce using rule 21 (PrototypeList)

    PrototypeList  go to state 42


state 33

   32 FnHeader: Type T_Identifier '(' . Formals ')'

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 35 (Formals)

    Variable    go to state 35
    Type        go to state 36
    Formals     go to state 43
    FormalList  go to state 38


state 34

   38 StmtBlock: '{' VarDecls . StmtList '}'
   39 VarDecls: VarDecls . VarDecl

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    $default  reduce using rule 42 (StmtList)

    VarDecl   go to state 44
    Variable  go to state 15
    Type      go to state 36
    StmtList  go to state 45


state 35

   37 FormalList: Variable .

    $default  reduce using rule 37 (FormalList)


state 36

   24 Variable: Type . T_Identifier
   30 Type: Type . T_Dims

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 46


state 37

   33 FnHeader: T_Void T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 47


state 38

   34 Formals: FormalList .
   36 FormalList: FormalList . ',' Variable

    ','  shift, and go to state 48

    $default  reduce using rule 34 (Formals)


state 39

    9 ClassOpts1: T_Extends T_Identifier .

    $default  reduce using rule 9 (ClassOpts1)


state 40

   11 ClassOpts2: T_Implements . IdentList

    T_Identifier  shift, and go to state 49

    IdentList  go to state 50


state 41

    8 ClassDecl: T_Class T_Identifier ClassOpts1 ClassOpts2 . '{' Fields '}'

    '{'  shift, and go to state 51


state 42

   19 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList . '}'
   20 PrototypeList: PrototypeList . Prototype

    T_Void        shift, and go to state 1
    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8
    '}'           shift, and go to state 52

    Prototype  go to state 53
    Type       go to state 54
    FnHeader   go to state 55


state 43

   32 FnHeader: Type T_Identifier '(' Formals . ')'

    ')'  shift, and go to state 56


state 44

   39 VarDecls: VarDecls VarDecl .

    $default  reduce using rule 39 (VarDecls)


state 45

   38 StmtBlock: '{' VarDecls StmtList . '}'
   41 StmtList: StmtList . Stmt

    T_Null            shift, and go to state 57
    T_This            shift, and go to state 58
    T_While           shift, and go to state 59
    T_For             shift, and go to state 60
    T_If              shift, and go to state 61
    T_Return          shift, and go to state 62
    T_Break           shift, and go to state 63
    T_New             shift, and go to state 64
    T_NewArray        shift, and go to state 65
    T_Print           shift, and go to state 66
    T_ReadInteger     shift, and go to state 67
    T_ReadLine        shift, and go to state 68
    T_StringConstant  shift, and go to state 69
    T_IntConstant     shift, and go to state 70
    T_DoubleConstant  shift, and go to state 71
    T_BoolConstant    shift, and go to state 72
    '-'               shift, and go to state 73
    NOT               shift, and go to state 74
    '{'               shift, and go to state 27
    '}'               shift, and go to state 75
    '('               shift, and go to state 76

    $default  reduce using rule 52 (OptExpr)

    StmtBlock   go to state 77
    Stmt        go to state 78
    OptExpr     go to state 79
    IfStmt      go to state 80
    WhileStmt   go to state 81
    ForStmt     go to state 82
    ReturnStmt  go to state 83
    BreakStmt   go to state 84
    PrintStmt   go to state 85
    Expr        go to state 86
    Constants   go to state 87


state 46

   24 Variable: Type T_Identifier .

    $default  reduce using rule 24 (Variable)


state 47

   33 FnHeader: T_Void T_Identifier '(' Formals ')' .

    $default  reduce using rule 33 (FnHeader)


state 48

   36 FormalList: FormalList ',' . Variable

    T_Bool        shift, and go to state 2
    T_Int         shift, and go to state 3
    T_Double      shift, and go to state 4
    T_String      shift, and go to state 5
    T_Identifier  shift, and go to state 8

    Variable  go to state 88
    Type      go to state 36


state 49

   14 IdentList: T_Identifier .

    $default  reduce using rule 14 (IdentList)


state 50

   11 ClassOpts2: T_Implements IdentList .
   13 IdentList: IdentList . ',' T_Identifier

    ','  shift, and go to state 89

    $default  reduce using rule 11 (ClassOpts2)


state 51

    8 ClassDecl: T_Class T_Identifier ClassOpts1 ClassOpts2 '{' . Fields '}'

    $default  reduce using rule 16 (Fields)

    Fields  go to state 90


state 52

   19 InterfaceDecl: T_Interface T_Identifier '{' PrototypeList '}' .

    $default  reduce using rule 19 (InterfaceDecl)


state 53

   20 PrototypeList: PrototypeList Prototype .

    $default  reduce using rule 20 (PrototypeList)


state 54

   30 Type: Type . T_Dims
   32 FnHeader: Type . T_Identifier '(' Formals ')'

    T_Dims        shift, and go to state 25
    T_Identifier  shift, and go to state 91


state 55

   22 Prototype: FnHeader . ';'

    ';'  shift, and go to state 92


state 56

   32 FnHeader: Type T_Identifier '(' Formals ')' .

    $default  reduce using rule 32 (FnHeader)


state 57

   88 Constants: T_Null .

    $default  reduce using rule 88 (Constants)


state 58

   61 Expr: T_This .

    $default  reduce using rule 61 (Expr)


state 59

   55 WhileStmt: T_While . '(' Expr ')' Stmt

    '('  shift, and go to state 93


state 60

   56 ForStmt: T_For . '(' OptExpr ';' Expr ';' OptExpr ')' Stmt

    '('  shift, and go to state 94


state 61

   53 IfStmt: T_If . '(' Expr ')' Stmt T_Else Stmt
   54       | T_If . '(' Expr ')' Stmt

    '('  shift, and go to state 95


state 62

   57 ReturnStmt: T_Return . OptExpr ';'

    T_Null            shift, and go to state 57
    T_This            shift, and go to state 58
    T_New             shift, and go to state 64
    T_NewArray        shift, and go to state 65
    T_ReadInteger     shift, and go to state 67
    T_ReadLine        shift, and go to state 68
    T_StringConstant  shift, and go to state 69
    T_IntConstant     shift, and go to state 70
    T_DoubleConstant  shift, and go to state 71
    T_BoolConstant    shift, and go to state 72
    '-'               shift, and go to state 73
    NOT               shift, and go to state 74
    '('               shift, and go to state 76

    $default  reduce using rule 52 (OptExpr)

    OptExpr    go to state 96
    Expr       go to state 86
    Constants  go to state 87


state 63

   58 BreakStmt: T_Break . ';'

    ';'  shift, and go to state 97


state 64

   64 Expr: T_New . '(' T_Identifier ')'

    '('  shift, and go to state 98


state 65

   65 Expr: T_NewArray . '(' Expr ',' Type ')'

    '('  shift, and go to state 99


state 66

   59 PrintStmt: T_Print . '(' ExprList ')' ';'

    '('  shift, and go to state 100


state 67

   62 Expr: T_ReadInteger . '(' ')'

    '('  shift, and go to state 101


state 68

   63 Expr: T_ReadLine . '(' ')'

    '('  shift, and go to state 102


state 69

   87 Constants: T_StringConstant .

    $default  reduce using rule 87 (Constants)


state 70

   84 Constants: T_IntConstant .

    $default  reduce using rule 84 (Constants)


state 71

   85 Constants: T_DoubleConstant .

    $default  reduce using rule 85 (Constants)


state 72

   86 Constants: T_BoolConstant .

    $default  reduce using rule 86 (Constants)


state 73

   79 Expr: '-' . Expr
